# ecommerce-backend

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml
docker/: api.Dockerfile  consumer.Dockerfile  inst.Dockerfile  payment.Dockerfile
lib/shared/base/: __init__.py  rabbit.py  settings.py  telegram.py
lib/shared/db/: __init__.py  config.py  utils.py
lib/shared/localizations/: instagram.py  telegram.py
lib/shared/schemas/: __init__.py  instagram.py  rabbit.py
rabbitmq/: enabled
services/api/: alembic.ini  entrypoint.sh  main.py  requirements.txt  router.py
services/api/broker/: __init__.py  instance.py
services/api/config/: __init__.py  auth.py  rabbitmq.py
services/api/domains/: mixin.py
services/api/migrations/: env.py
services/api/parsers/: __init__.py  aliexpress.py  location.py
services/api/routes/: __init__.py  graphql.py  images.py  instagram.py  maintain.py
services/api/schemas/: __init__.py
services/api/services/: __init__.py  customers.py  mixins.py  orders.py  product_category.py  products.py  public.py  requisite_types.py  requisites.py  transactions.py  users.py
services/api/utils/: __init__.py  auth.py  dict_search.py  get_user_ids.py  graphql.py  images.py  mixins.py  permissions.py  routes.py  static.py  telegram_hash.py  tokens.py
services/consumer/: main.py  requirements.txt
services/consumer/helpers/: __init__.py  payment.py
services/consumer/router/: __init__.py  instance.py
services/consumer/services/: __init__.py  instagram.py  migration.py  telegram.py
services/consumer/tasks/: image.py  instagram.py  payment.py  telegram.py  users.py
services/inst/: dependencies.py  helpers.py  main.py  requirements.txt  storages.py
services/inst/core/: __init__.py  (+4 more)
services/payment/: main.py  requirements.txt  settings.py
(+151 files in other folders)
